--- a/site/components/UI/Content/Content.module.css
+++ b/site/components/UI/Content/Content.module.css
@@ -7,7 +7,24 @@
   padding: 0 1rem;
 }
 
-.siteName {
+.breadcrumbs {
+  display: flex;
+  list-style: none;
+  margin: 1rem 0;
+  padding: 0;
+}
+
+.breadcrumbs li::after {
+  content: ">";
+  margin: 0 0.5rem;
+}
+
+.breadcrumbs li:last-child::after {
+  content: "";
+  margin-right: 0;
+}
+
+.branding {
   flex-grow: 1;
 }
 
