Cleaning up data

--- a/site/components/CartLineItems/CartLineItems.module.css
+++ b/site/components/CartLineItems/CartLineItems.module.css
@@ -1,10 +1,10 @@
-.product {
+.entry {
   border-bottom: 1px solid #ccc;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
 }
 
-.product:last-child {
+.entry:last-child {
   border-bottom: none;
   margin-bottom: 0;
   padding-bottom: 0;
